[package]
name = "internet_map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
futures = "0.3.29"
tokio = { version = "1", features = ["full"] }
surge-ping = "0.8.0"
ggez = "0.9.3"
hsv = "0.1.1"
sqlite = "0.31.1"
